@@ -1,6 +1,7 @@
 2012-12-19  Gustavo Sverzut Barbieri (k-s)
 
-	* Fixed RGBA_Image->flags.loaded for copied images.
+	* Fixed Evas RGBA_Image->flags.loaded for copied images.
+	* Fixed evas_object_image_is_inside() implementation.
 
 2012-12-19  Carsten Haitzler (The Rasterman)
 
